sdk/android/v5/additional-message-filtering.mdx
---
title: "Additional Message Filtering"
---



The `MessagesRequest` class as you must be familiar with helps you to fetch messages based on the various parameters provided to it. This document will help you understand better the various options that are available using the `MessagesRequest` class.

The `MessagesRequest` class is designed using the `Builder design pattern`. In order to obtain an object of the `MessagesRequest` class, you will have to make use of the `MessagesRequestBuilder` class in the `MessagesRequest` class.

The `MessagesRequestBuilder` class allows you to set various parameters to the `MessagesRequest` class based on which the messages are fetched.

Steps to generate an object of the MessagesRequest class:

1. Create an object of the `MessagesRequestBuilder` class.
2. Set all the parameters you wish to set.
3. Call the `build()` method of the `MessagesRequestBuilder` class to get an object of the `MessagesRequest` class.

Once you have an object of the `MessagesRequest` class, you can call either the `fetchNext()` method or the `fetchPrevious()` method using the object.

1. fetchNext() - Calling this method will return the messages after the specified parameters.
2. fetchPrevious() - Calling this method will give you messages before the specified parameters.

Since messages are obtained in a paginated manner, a `maximum of 100` messages can be pulled in a single iteration. Calling the `fetchPrevious()`/`fetchNext()` method on the same `MessagesRequest` object will get you the next set of messages.

Now that you are clear how to use the `MessagesRequest` class, below are the various options available:

## Number of messages fetched

*In other words, how do I set the number of messages fetched in a single iteration*

To achieve this, you can use the `setLimit()` method. This method takes an integer value as the input and informs the SDK to fetch the specified number of messages in one iteration. The maximum number of messages that can be fetched in one go is `100`.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
.setLimit(50)
.setGUID(GUID)
.build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setLimit(50)
  .setGUID(GUID)
  .build() 
```

</Tab>

</Tabs>

## Messages for a user conversation

*In other words, how do I fetch messages between me and any user*

This can be achieved using the `setUID()` method. This method takes the UID of the user with whom the conversation is to be fetched. When a valid UID is passed, the SDK will return all the messages that are a part of the conversation between the logged-in user and the UID that has been specified.

<Tabs>
<Tab title="Java">
```java
MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
.setUID("cometchat-uid-1")
.setLimit(50)
.build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val messagesRequest = MessagesRequestBuilder()
  .setUID("cometchat-uid-1")
  .setLimit(50)
  .build()
```

</Tab>

</Tabs>

## Messages for a group conversation

*In other words, how do I fetch messages for any group conversation*

You can achieve this using the `setGUID()` method. This method takes the GUID of a group for which the conversations are to be fetched. Passing a valid GUID to this method will return all the messages that are a part of the group conversation. Please note that the logged-in user must be a member of the group to fetch the messages for that group.

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder() .setGUID("cometchat-guid-1") .setLimit(50) .build();

<Tabs>
<Tab title="Java">
```java
MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
.setGUID("cometchat-guid-1")
.setLimit(50)
.build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val messagesRequest = MessagesRequestBuilder()
  .setGUID("cometchat-guid-1")
  .setLimit(50)
  .build()
```

</Tab>

</Tabs>

## Messages before/after a message

*In other words, how do I fetch messages before or after a particular message*

This can be achieved using the `setMessageId()` method. This method takes the message-id as input and provides messages only after/before the message-id based on if the fetchNext() or fetchPrevious() method is triggered.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setMessageId(100)
  .setLimit(50)
  .setUID(UID)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setMessageId(100)
  .setLimit(50)
  .setGUID(GUID)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setMessageId(100)
  .setLimit(50)
  .setUID(UID)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setMessageId(100)
  .setLimit(50)
  .setGUID(GUID)
  .build()
```

</Tab>

</Tabs>

This method can be used along with `setUID()` or `setGUID()` methods to fetch messages after/before any specific message-id for a particular user/group conversation.

## Messages before/after a given time

*In other words, how do I fetch messages before or after a particular date or time*

You can easily achieve this using the `setTimestamp()` method. This method takes the Unix timestamp as input and provides messages only after/before the timestamp based on if fetchNext() or fetchPrevious() method is triggered.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setTimestamp(1512687363)
  .setLimit(50)
  .setUID(UID)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setTimestamp(1512687363)
  .setLimit(50)
  .setGUID(GUID)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setTimestamp(1512687363)
  .setLimit(50)
  .setUID(UID)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setTimestamp(1512687363)
  .setLimit(50)
  .setGUID(GUID)
  .build() 
```

</Tab>

</Tabs>

This method can be used along with `setUID()` or `setGUID()` methods to fetch messages after/before any specific date or time for a particular user/group conversation.

## Unread messages

*In other words, how do I fetch unread messages*

This can easily be achieved using setting the unread flag to true. For this, you need to use the `setUnread()` method. This method takes a boolean value as input. If the value is set to true, the SDK will return just the unread messages.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setUnread(true)
  .setLimit(50)
  .setUID(UID)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setUnread(true)
  .setLimit(50)
  .setGUID(GUID)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setUnread(true)
  .setLimit(50)
  .setUID(UID)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setUnread(true)
  .setLimit(50)
  .setGUID(GUID)
  .build()
```

</Tab>

</Tabs>

This method along with `setGUID()` or `setUID()` can be used to fetch unread messages for a particular group or user conversation respectively.

## Exclude messages from blocked users

*In other words, how do I fetch messages excluding the messages from the users I have blocked*

This can be easily achieved using the`hideMessagesFromBlockedUsers()` method. This method accepts a boolean value which determines if the messages from users blocked by the logged-in user need to be a part if the fetched messages. If the value is set to true, the messages will be hidden and won't be a part of the messages fetched. The default value is false i.e if this method is not used, the messages from blocked users will be included in the fetched messages.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .hideMessagesFromBlockedUsers(true)
  .setUID(UID)
  .setLimit(50)
  .build(); 
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .hideMessagesFromBlockedUsers(true)
  .setGUID(GUID)
  .setLimit(50)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .hideMessagesFromBlockedUsers(true)
  .setUID(UID)
  .setLimit(50)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .hideMessagesFromBlockedUsers(true)
  .setGUID(GUID)
  .setLimit(50)
  .build()
```

</Tab>

</Tabs>

This method can be used to hide the messages by users blocked by logged in user in groups that both the members are a part of.

## Updated and received messages

*In other words, how do I fetch messages that have been received or updated after a particular date or time*

This method accepts a Unix timestamp value and will return all the messages that have been updated and the ones that have been sent/received after the specified time. The messages updated could mean the messages that have been marked as read/delivered or if the messages are edited or deleted.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setUpdatedAfter(1514321321)
  .setLimit(50)
  .setUID(UID)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setUpdatedAfter(1514321321)
  .setLimit(50)
  .setGUID(GUID)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setUpdatedAfter(1514321321)
  .setLimit(50)
  .setUID(UID)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setUpdatedAfter(1514321321)
  .setLimit(50)
  .setGUID(GUID)
  .build()
```

</Tab>

</Tabs>

This can be useful in finding the messages that have been received or updated after a certain time. Can prove very useful if you are saving the messages locally and would like to know the messages that have been updated or received after the last message available in your local databases.

## Updated messages only

*In other words, how do I fetch messages that have been updated after a particular date or time*

This can be achieved easily by setting the updatesOnly parameter to true. To do so, you can use the updatesOnly() method. This method takes a boolean input and can be used with the `setUpdatedAfter()` method to get jus the updated messages and not the messages sent/received after the specified time. This method cannot be used independently and always needs to be used with the `setUpdatedAfter()` method.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setUpdatedAfter(1514321321)
  .updatesOnly(true)
  .setLimit(50)
  .setUID(UID)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setUpdatedAfter(1514321321)
  .updatesOnly(true)
  .setLimit(50)
  .setGUID(GUID)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setUpdatedAfter(1514321321)
  .updatesOnly(true)
  .setLimit(50)
  .setUID(UID)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setUpdatedAfter(1514321321)
  .updatesOnly(true)
  .setLimit(50)
  .setGUID(GUID)
  .build()
```

</Tab>

</Tabs>

## Messages for multiple categories

*In other words, how do I fetch messages belonging to multiple categories*

We recommend before trying this, you refer to the [Message structure and hierarchy guide](/sdk/android/v5/message-structure-and-hierarchy) to get familiar with the various categories of messages.

For this, you will have to use the `setCategories()` method. This method accepts a list of categories. This tells the SDK to fetch messages only belonging to these categories.

<Tabs>
<Tab title="Java (User)">
```java
String GUID = "cometchat-guid-1";
List<String> categories = new ArrayList<>();
categories.add("message");
categories.add("custom");

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setCategories(categories)
  .setLimit(50)
  .setGUID(GUID)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";
List<String> categories = new ArrayList<>();
categories.add("message");
categories.add("custom");

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setCategories(categories)
  .setLimit(50)
  .setGUID(GUID)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"
val categories: MutableList<String> = ArrayList()
categories.add("message")
categories.add("custom")

val messagesRequest = MessagesRequestBuilder()
  .setCategories(categories)
  .setLimit(50)
  .setUID(UID)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"
val categories: MutableList<String> = ArrayList()
categories.add("message")
categories.add("custom")

val messagesRequest = MessagesRequestBuilder()
  .setCategories(categories)
  .setLimit(50)
  .setGUID(GUID)
  .build()
```

</Tab>

</Tabs>

The above snippet will help you get only the messages belonging to the `message` and `custom` category. This can also be used to disable certain categories of messages like `call` and `action`. This along with `setGUID()` and `setUID()` can help display only the messages you wish to display avoiding the other category of messages.

## Messages for multiple types

*In other words, how do I fetch messages belonging to multiple types*

We recommend before trying this, you refer to the [Message structure and hierarchy guide](/sdk/android/v5/message-structure-and-hierarchy) to get familiar with the various types of messages.

This can be easily achieved using the `setTypes()` method. This method accepts a list of types. This tells the SDK to fetch messages only belonging to these types.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";
List<String> categories = new ArrayList<>();
categories.add("message");
List<String> types = new ArrayList<>();
types.add("image");
types.add("video");
types.add("audio");
types.add("file");

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setCategories(categories)
  .setTypes(types)
  .setLimit(50)
  .setUID(UID)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";
List<String> categories = new ArrayList<>();
categories.add("message");
List<String> types = new ArrayList<>();
types.add("image");
types.add("video");
types.add("audio");
types.add("file");

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setCategories(categories)
  .setTypes(types)
  .setLimit(50)
  .setGUID(GUID)
  .build();  
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"
val categories: MutableList<String> = ArrayList()
categories.add("message")
val types: MutableList<String> = ArrayList()
types.add("image")
types.add("video")
types.add("audio")
types.add("file")

val messagesRequest = MessagesRequestBuilder()
  .setCategories(categories)
  .setTypes(types)
  .setLimit(50)
  .setUID(UID)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"
val categories: MutableList<String> = ArrayList()
categories.add("message")
val types: MutableList<String> = ArrayList()
types.add("image")
types.add("video")
types.add("audio")
types.add("file")

val messagesRequest = MessagesRequestBuilder()
  .setCategories(categories)
  .setTypes(types)
  .setLimit(50)
  .setGUID(GUID)
  .build()
```

</Tab>

</Tabs>

Using the above code snippet, you can fetch all the media messages. This along with setUID() or setGUID() can be used to fetch media messages for any particular conversation. This can be useful in many other scenarios as well.

## Messages for a specific thread

*In other words, how do I fetch messages that are a part of a thread and not directly a user/group conversations*

This can be done using the `setParentMessageId()` method. This method needs to be used when you have implemented threaded conversations in your app. This method will return the messages only belonging to the thread with the specified parent Id.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .setParentMessageId(100)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .setParentMessageId(100)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"
val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.setParentMessageId(100)
.build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setGUID(GUID)
.setParentMessageId(100)
.build()
```

</Tab>

</Tabs>

The above code snippet returns the messages that belong to the thread with parent id 100.

## Hide threaded messages in user/group conversations

*In other words, how do I exclude threaded messages from the normal user/group conversations*

In order to do this, you can use the `hideReplies()` method. This method is also related to threaded conversations. This method takes boolean as input. This boolean when set to true will make sure that the messages that belong to threads are not fetched. If set to false, which is also the default value, the messages belong to the threads will also be fetched along with other messages.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .hideReplies(true)
  .setUID(UID)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .hideReplies(true)
  .setGUID(GUID)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.hideReplies(true)
.setUID(UID)
.build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.hideReplies(true)
.setGUID(GUID)
.build()  
```

</Tab>

</Tabs>

## Hide deleted messages in user/group conversations

*In other words, how do I exclude deleted messages a user/group conversations*

In order to do this, you can use the hideDeletedMessages() method. This method takes boolean as input. This boolean when set to true will make sure that the deleted messages are not fetched. If set to false, which is also the default value, the deleted messages will also be fetched along with other messages.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .hideDeletedMessages(true)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setGUID(GUID)
  .hideDeletedMessages(true)
  .build();  
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.hideDeletedMessages(true)
.build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setLimit(50)
  .setGUID(GUID)
  .hideDeletedMessages(true)
  .build()   
```

</Tab>

</Tabs>

## Hide quoted messages in user/group conversations

*In other words, how do I exclude quoted messages in a user/group conversations*

In order to do this, you can use the `hideQuotedMessages()` method. This method takes boolean as input. This boolean when set to true will make sure that the quoted messages are not fetched. If set to false, which is also the default value, the quoted messages will also be fetched along with other messages.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .hideQuotedMessages(true)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setGUID(GUID)
  .hideQuotedMessages(true)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.hideQuotedMessages(true)
.build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setLimit(50)
  .setGUID(GUID)
  .hideQuotedMessages(true)
  .build()
```

</Tab>

</Tabs>

## Messages by tags

*In other words, how do I fetch messages belonging to specific tags*

In order to do this, you can use the `setTags()` method. This method accepts a list of tags. This tells the SDK to fetch messages only belonging to these tags.

<Tabs>
<Tab title="Java">
```java
String UID = "cometchat-uid-1";
List<String> tags = new ArrayList<>();
tags.add("pinned");

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .setTags(tags)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID = "cometchat-uid-1"
val tags: MutableList<String> = ArrayList()
tags.add("pinned")

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.setTags(tags)
.build()
```

</Tab>

</Tabs>

## Messages with tags

*In other words, how do I fetch messages with the tags information*

In order to do this, you can use the `withTags()` method. This method accepts boolean as input. When set to `true` , the SDK will fetch messages along with the tags information. When set to `false` , the SDK will not fetch tags information associated with messages. The default value for this parameter is `false` .

<Tabs>
<Tab title="Java">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .withTags(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.withTags(true)
.build()
```

</Tab>

</Tabs>

## Messages with links

In other words, as a logged-in user, how do I fetch messages that contains links?

In order to do this, you can use the `hasLinks()` method. This method accepts boolean as input. When set to `true` , the SDK will fetch messages which have links in the text. The default value for this parameter is `false`.

<Note>

This feature is only available with `Conversation & Advanced Search`. The `Conversation & Advanced Search` is only available in `Advanced` & `Custom` [plans](https://www.cometchat.com/pricing). If you're already on one of these plans, please enable the `Conversation & Advanced Search` from [CometChat Dashboard](https://app.cometchat.com) (Open your app, navigate to Chats -> Settings -> General Configuration)

</Note>

<Tabs>
<Tab title="Java">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .hasLinks(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.hasLinks(true)
.build()
```

</Tab>

</Tabs>

## Messages with attachments

In other words, as a logged-in user, how do I fetch messages that contains attachments?

In order to do this, you can use the `hasAttachments()` method. This method accepts boolean as input. When set to `true` , the SDK will fetch messages which have attachments (image, audio, video or file). The default value for this parameter is `false`.

<Note>

This feature is only available with `Conversation & Advanced Search`. The `Conversation & Advanced Search` is only available in `Advanced` & `Custom` [plans](https://www.cometchat.com/pricing). If you're already on one of these plans, please enable the `Conversation & Advanced Search` from [CometChat Dashboard](https://app.cometchat.com) (Open your app, navigate to Chats -> Settings -> General Configuration)

</Note>

<Tabs>
<Tab title="Java">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .hasAttachments(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.hasAttachments(true)
.build()
```

</Tab>

</Tabs>

## Messages with reactions

In other words, as a logged-in user, how do I fetch messages that contains reactions?

In order to do this, you can use the `hasReactions()` method. This method accepts boolean as input. When set to `true` , the SDK will fetch messages which have reactions. The default value for this parameter is `false`.

<Note>

This feature is only available with `Conversation & Advanced Search`. The `Conversation & Advanced Search` is only available in `Advanced` & `Custom` [plans](https://www.cometchat.com/pricing). If you're already on one of these plans, please enable the `Conversation & Advanced Search` from [CometChat Dashboard](https://app.cometchat.com) (Open your app, navigate to Chats -> Settings -> General Configuration)

</Note>

<Tabs>
<Tab title="Java">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .hasReactions(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.hasReactions(true)
.build()
```

</Tab>

</Tabs>

## Messages with mentions

In other words, as a logged-in user, how do I fetch messages that contains mentions?

In order to do this, you can use the `hasMentions()` method. This method accepts boolean as input. When set to `true` , the SDK will fetch messages which have mentions. The default value for this parameter is `false`.

<Note>

This feature is only available with `Conversation & Advanced Search`. The `Conversation & Advanced Search` is only available in `Advanced` & `Custom` [plans](https://www.cometchat.com/pricing). If you're already on one of these plans, please enable the `Conversation & Advanced Search` from [CometChat Dashboard](https://app.cometchat.com) (Open your app, navigate to Chats -> Settings -> General Configuration)

</Note>

<Tabs>
<Tab title="Java">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .hasMentions(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
.setLimit(50)
.setUID(UID)
.hasMentions(true)
.build()
```

</Tab>

</Tabs>

## Messages with particular user mentions

In other words, as a logged-in user, how do I fetch messages that mentions specific users?

In order to do this, you can use the `setMentionedUIDs()` method. This method accepts an array of UIDs as input. When set, the SDK will fetch messages which have the mentions of the UIDs passed.

<Note>

This feature is only available with `Conversation & Advanced Search`. The `Conversation & Advanced Search` is only available in `Advanced` & `Custom` [plans](https://www.cometchat.com/pricing). If you're already on one of these plans, please enable the `Conversation & Advanced Search` from [CometChat Dashboard](https://app.cometchat.com) (Open your app, navigate to Chats -> Settings -> General Configuration)

</Note>

<Tabs>
<Tab title="Java">
```java
String UID = "cometchat-uid-1";
List<String> mentionedUIDs = new ArrayList<>();
mentionedUIDs.add("cometchat-uid-1");

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .setMentionedUIDs(mentionedUIDs)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID = "cometchat-uid-1"
val mentionedUIDs: MutableList<String> = ArrayList()
mentionedUIDs.add("cometchat-uid-1")

val messagesRequest = MessagesRequestBuilder()
  .setLimit(50)
  .setUID(UID)
  .setMentionedUIDs(mentionedUIDs)
  .build()
```

</Tab>

</Tabs>

## Messages with specific attachment types

In other words, as a logged-in user, how do I fetch messages that contain specific types of attachments?

In order to do this, you can use the `setAttachmentTypes()` method. This method accepts an array of `CometChat.AttachmentType` ENUM values as input. When provided, the SDK will fetch only those messages that include attachments of the specified types (such as image, audio, video, or file).

<Note>

This feature is only available with `Conversation & Advanced Search`. The `Conversation & Advanced Search` is only available in `Advanced` & `Custom` [plans](https://www.cometchat.com/pricing). If you're already on one of these plans, please enable the `Conversation & Advanced Search` from [CometChat Dashboard](https://app.cometchat.com) (Open your app, navigate to Chats -> Settings -> General Configuration)

</Note>

<Tabs>
<Tab title="Java">
```java
String UID = "cometchat-uid-1";
  List<AttachmentType> attachmentTypes = new ArrayList<>();
  attachmentTypes.add(AttachmentType.IMAGE);
  attachmentTypes.add(AttachmentType.FILE);

  MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
      .setLimit(50)
      .setUID("UID")
      .setAttachmentTypes(attachmentTypes)
      .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val UID = "cometchat-uid-1" 
  val attachmentTypes: MutableList<AttachmentType> = ArrayList()
  attachmentTypes.add(AttachmentType.FILE)
  attachmentTypes.add(AttachmentType.IMAGE)

  val messagesRequest = MessagesRequestBuilder()
    .setLimit(50)
    .setUID(UID)
    .setAttachmemnt(attachmentTypes)
    .build()
```

</Tab>

</Tabs>

## Pinned messages

*In other words, how do I fetch the pinned messages of a conversation*

This can be achieved by setting the pinned flag to true using the `setPinned()` method. Setting a `UID` or a `GUID` is mandatory for this filter — pinned messages are always scoped to a single conversation. The returned list is sorted by the time of pinning, most recently pinned first.

<Tabs>
<Tab title="Java (User)">
```java
String UID = "cometchat-uid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setPinned(true)
  .setLimit(50)
  .setUID(UID)
  .build();
```

</Tab>

<Tab title="Java (Group)">
```java
String GUID = "cometchat-guid-1";

MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setPinned(true)
  .setLimit(50)
  .setGUID(GUID)
  .build();
```

</Tab>

<Tab title="Kotlin (User)">
```kotlin
val UID = "cometchat-uid-1"

val messagesRequest = MessagesRequestBuilder()
  .setPinned(true)
  .setLimit(50)
  .setUID(UID)
  .build()
```

</Tab>

<Tab title="Kotlin (Group)">
```kotlin
val GUID = "cometchat-guid-1"

val messagesRequest = MessagesRequestBuilder()
  .setPinned(true)
  .setLimit(50)
  .setGUID(GUID)
  .build()
```

</Tab>

</Tabs>

For the full pin workflow — pinning, unpinning, limits and real-time events — see [Pin A Message](/sdk/android/v5/pin-message).

## Saved messages

*In other words, how do I fetch the messages the logged-in user has saved*

This can be achieved by setting the saved flag to true using the `setSaved()` method. Saved messages are private to the logged-in user and span all of their conversations, so this filter must **not** be combined with `setUID()` or `setGUID()`. The returned list is sorted by the time of saving, most recently saved first.

<Tabs>
<Tab title="Java">
```java
MessagesRequest messagesRequest = new MessagesRequest.MessagesRequestBuilder()
  .setSaved(true)
  .setLimit(50)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val messagesRequest = MessagesRequestBuilder()
  .setSaved(true)
  .setLimit(50)
  .build()
```

</Tab>

</Tabs>

<Note>

The pinned and saved lists paginate forward-only on an internal server cursor. `fetchNext()` works the same from the caller's side, but message-window filters such as `setMessageId()` and `setTimestamp()` do not apply to these two queries.

</Note>

For the full save workflow — saving, unsaving, limits and real-time events — see [Save A Message](/sdk/android/v5/save-message).
